fortune-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: fortune
spec:
  containers:
  - image: luksa/fortune
    name: html-generator
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    volumeMounts:
    - mountPath: /var/htdocs
      name: html
  - image: nginx:alpine
    name: web-server
    resources:
      limits:
        memory: "64Mi"
        cpu: "125m"
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: html
    ports:
      - containerPort: 80
        protocol: TCP
  volumes:
  - name: html
    emptyDir: {}
