gitrepo-volume-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-volume-pod
  labels:
    name: gitrepo-volume-pod
spec:
  containers:
  - name: web-server
    image: nginx:alpine
    resources:
      limits:
        memory: "128Mi"
        cpu: "250m"
    volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
        readOnly: true
    ports:
      - containerPort: 80
  volumes:
    - name: html
      gitRepo:
        repository: https://github.com/Rezalt0/kubia-website-example.git
        directory: .
