kubia-gpu.yml
apiVersion: v1 
kind: Pod
metadata:
  name: kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - image: rezalt0/kubia
     name: kubia
