kubia-liveness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-libeness
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: kubia
     livenessProbe:
       httpGet:
         path: /
         port: 8080
       initialDelaySecond: 15
