kubia-manual.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
  namespace: custom-namespace
spec:
  containers:
  - image: rezalt0/kubia
     name: kubia
     ports:
     - containerPort: 8080
       protocol: TCP
