external-service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service-name
spec:
  type: ExternalName
  externalName: someapi.somecompany.com
  ports:
  - port: 80
