kubia-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  clusterIP: None
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
