kubia-svc-some-ports.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-someports
spec:
  selector:
    app: kubia
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8443
